src/tui/widgets/popups/import_modpack/render/snapshots/rmcl__tui__widgets__popups__import_modpack__render__tests__import_modpack_renders_fetching_step.snap
---
source: src/tui/widgets/popups/import_modpack/render/tests.rs
expression: terminal.backend()
---
"╭Import Modpack────────────────────────────────────────────╮"
"│Fetching modpack info...                                  │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"╰──────────────────────────────────────────────[Esc] cancel╯"
