src/tui/widgets/popups/import_modpack/render/snapshots/rmcl__tui__widgets__popups__import_modpack__render__tests__import_modpack_renders_input_step.snap
---
source: src/tui/widgets/popups/import_modpack/render/tests.rs
expression: terminal.backend()
---
"╭Import Modpack────────────────────────────────────────────╮"
"│URL, slug, or pack file path...█                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"╰─────────────────────────────────────────────[Enter] fetch╯"
